--- a/Lobby/estilos.css
+++ b/Lobby/estilos.css
@@ -218,3 +218,93 @@ h1 {
 #totalFichas button {
 	padding: 3px 5px;
 }
+
+
+.sug{
+	background-color: #f8cb4e;
+    color: #ffffff;
+    border-radius: 10px;
+    border: none;
+    padding: 15px 8px;
+    cursor: pointer
+}
+
+.sug {
+	position: fixed;
+	top: 20px;
+	left: 90px; 
+  }
+
+.sug:hover{
+	background-color: #2af102;
+    color: #ffffff;
+    border-radius: 10px;
+    border: none;
+    padding: 15px 8px;
+    cursor: pointer
+}
+
+.modalSug {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+/* Estilos para el modal de sugerencias */
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco con opacidad */
+}
+
+.modalSug {
+    width: 60%;
+    max-width: 400px; /* Ajusta el ancho máximo según lo necesites */
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff; /* Fondo blanco */
+    text-align: center;
+}
+
+.modalSug label,
+.modalSug input,
+.modalSug select,
+.modalSug button {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.modalSug input,
+.modalSug select {
+    width: calc(100% - 20px); /* Resta el padding */
+    padding: 8px;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+#cerrarModalSug {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    color: #ff0000;
+    font-size: 20px;
+    cursor: pointer;
+}
